--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# tools
+/dumper.py
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,7 +107,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+tests/.env
 .venv
 env/
 venv/
