--- a/tests/example.env
+++ b/tests/example.env
@@ -1,2 +1,6 @@
-BATTERIE_HOST = '192.168.1.100'
-API_READ_TOKEN = 'abcdefgh-xxxx-yyyy-zzzz-0a1b2c3d4e5f'
+BATTERIE_1_HOST = '192.168.188.11'
+API_READ_TOKEN_1 = 'abcdefgh-xxxx-yyyy-zzzz-0a1b2c3d4e5f'
+BATTERIE_2_HOST = '192.168.188.12'
+API_READ_TOKEN_2 = 'abcdefgh-zzzz-yyyy-xxxx-0a1b2c3d4e5f'
+BACKUP_BUFFER_USOC = 20
+OPERATING_MODE = 2
