--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,6 +3,6 @@ pytest-cov
 requests~=2.31
 setuptools>=73.0.0
 freezegun~=1.2.1
-dotenv>=1.0.1
 aiohttp>=3.1.1
+aiohttp-fast-zlib>=0.1.1
 aioresponses~=0.7.6
