--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,14 @@
 pytest
 pytest-cov
-requests~=2.31
-setuptools>=73.0.0
+pytest-asyncio
+pytest-mock
+requests~=2.32
+load_dotenv>=0.1.0
+setuptools==65.5.1
 freezegun~=1.2.1
-aiohttp>=3.1.1
+aiohttp>=3.3.0,<4.0.0
 aiohttp-fast-zlib>=0.1.1
+urllib3>=1.26.20,<2.0.0
+yarl==1.16.0
 aioresponses~=0.7.6
+asyncmock>=0.4.2
