--- a/requirements-live.txt
+++ b/requirements-live.txt
@@ -1,4 +1,6 @@
-requests~=2.31
+requests~=2.32
 setuptools==65.5.1
-aiohttp>=3.1.1
+aiohttp>=3.3.0,<4.0.0
 aiohttp-fast-zlib>=0.1.1
+urllib3>=1.26.20,<2.0.0
+yarl==1.16.0
