--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 pytest
 pytest-cov
+pytest-asyncio
+pytest-mock
 requests~=2.32
+load_dotenv>=0.1.0
 setuptools==65.5.1
 freezegun~=1.2.1
 aiohttp>=3.3.0,<4.0.0
 aiohttp-fast-zlib>=0.1.1
-urllib3>=1.26.20
+urllib3>=1.26.20,<2.0.0
 yarl==1.16.0
-asynctest==0.13.0
+asyncmock>=0.4.2
