--- a/tests/env.example
+++ b/tests/env.example
@@ -1,3 +1,5 @@
+BATTERIE_HOST = '192.168.188.200'
+API_READ_TOKEN = 'abcdefgh-xxxx-zzzz-yyyy-0a1b2c3d4e5f'
 BATTERIE_1_HOST = '192.168.188.11'
 API_READ_TOKEN_1 = 'abcdefgh-xxxx-yyyy-zzzz-0a1b2c3d4e5f'
 BATTERIE_2_HOST = '192.168.188.12'
@@ -10,3 +12,4 @@ BACKUP_BUFFER_USOC = 20
 #        "6": Battery-Module-Extension (30%)
 #        "10": Time-Of-Use
 OPERATING_MODE = 2
+BATTERIE_HOST_PORT='80'
