--- a/tests/env.example
+++ b/tests/env.example
@@ -4,6 +4,7 @@ BATTERIE_1_HOST = '192.168.188.11'
 API_READ_TOKEN_1 = 'abcdefgh-xxxx-yyyy-zzzz-0a1b2c3d4e5f'
 BATTERIE_2_HOST = '192.168.188.12'
 API_READ_TOKEN_2 = 'abcdefgh-zzzz-yyyy-xxxx-0a1b2c3d4e5f'
+BATTERIE_3_HOST = '192.168.188.13'
 # Percent set on settings page
 BACKUP_BUFFER_USOC = 20
 # Operating Mode
