--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,6 @@
 minversion = 6.0
 addopts = -ra -q
 asyncio_mode = auto
-asyncio_default_fixture_loop_scope = module
+asyncio_default_fixture_loop_scope = session
 testpaths =
     tests
