--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,12 @@
-aiohttp>=3.3.0,<4.0.0
-aiohttp-fast-zlib>=0.1.1
+aiohttp~=3.11.11,<4.0.0
+aiohttp-fast-zlib~=0.2.0
 isal==1.7.1
 urllib3>=1.26.20,<2.0.0
 yarl==1.16.0
 voluptuous>=0.15.2
-#
+setuptools==75.1.0
+
+#for tests
 pytest
 pytest-asyncio
 pytest-cov
@@ -13,4 +15,3 @@ asyncmock>=0.4.2
 requests~=2.32
 load_dotenv>=0.1.0
 freezegun~=1.2.1
-setuptools==65.5.1
