--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,9 +3,9 @@ aiohttp~=3.11.11,<4.0.0
 aiohttp-fast-zlib~=0.2.0
 isal==1.7.1
 urllib3>=1.26.20,<2.0.0
-yarl==1.18.3
+yarl~=1.18.3
 voluptuous>=0.15.2
-setuptools==75.1.0
+setuptools~=75.7.0
 
 #for tests
 pytest
@@ -15,7 +15,7 @@ pytest-cov
 pytest-mock
 asyncmock>=0.4.2
 requests~=2.32
-load_dotenv>=0.1.0
 freezegun~=1.5.1
 responses
 urllib3_mock
+load_dotenv>=0.1.0
