--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
 #must be compatible versions with home assistant
 aiohttp~=3.11.11,<4.0.0
-aiohttp-fast-zlib~=0.2.0
-isal==1.7.1
+aiohttp-fast-zlib~=0.2.1,<4.0.0
+isal~=1.7.1
 urllib3>=1.26.20,<2.0.0
 yarl~=1.18.3
 voluptuous>=0.15.2
