--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-# must be compatible version with Home Assistant
-requests~=2.32
-setuptools==75.1.0
-aiohttp>=3.11.11,<4.0.0
-aiohttp-fast-zlib>=0.1.1
-isal==1.7.1
+#must be compatible versions with home assistant
+aiohttp~=3.11.11,<4.0.0
+aiohttp-fast-zlib~=0.2.1,<4.0.0
+isal~=1.7.1
 urllib3>=1.26.20,<2.0.0
-yarl==1.16.0
+yarl~=1.18.3
+setuptools~=75.7.0
+requests~=2.32
