--- a/requirements-live.txt
+++ b/requirements-live.txt
@@ -1,8 +1,37 @@
-#must be compatible versions with home assistant 24.7 or later
-aiohttp>=3.9.5,<4.0.0
-aiohttp-fast-zlib>=0.1.1,<4.0.0
-isal~=1.7.1
-requests~=2.32.3
-tzlocal>=5.2
-urllib3~=1.26.5,<2
-yarl>=1.9.4
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiohttp-fast-zlib==0.2.1
+aiosignal==1.3.2
+asyncmock==0.4.2
+attrs==24.3.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+coverage==7.6.10
+freezegun==1.5.1
+frozenlist==1.5.0
+idna==3.10
+iniconfig==2.0.0
+isal==1.7.1
+load-dotenv==0.1.0
+mock==5.1.0
+multidict==6.1.0
+packaging==24.2
+pluggy==1.5.0
+propcache==0.2.1
+pytest==8.3.4
+pytest-aiohttp==1.0.5
+pytest-asyncio==0.25.1
+pytest-cov==6.0.0
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+PyYAML==6.0.2
+requests==2.32.3
+responses==0.25.3
+setuptools==75.7.0
+six==1.17.0
+tzlocal==5.2
+urllib3==1.26.20
+urllib3-mock==0.3.3
+voluptuous==0.15.2
+yarl==1.18.3
