--- a/requirements-live.txt
+++ b/requirements-live.txt
@@ -1,7 +1,8 @@
-#must be compatible versions with home assistant
-aiohttp~=3.11.11,<4.0.0
-aiohttp-fast-zlib~=0.2.1,<4.0.0
-isal~=1.7.1
-urllib3>=1.26.20,<2.0.0
-yarl~=1.18.3
-setuptools~=75.7.0
+#must be compatible versions with home assistant core
+aiohttp~=3.12.15,<4.0.0
+aiohttp-fast-zlib~=0.3.0,<4.0.0
+isal~=1.7
+requests~=2.32.4
+urllib3>=2.0
+yarl~=1.20.1
+#setuptools~=75.7.0
