--- a/tests/env.example
+++ b/tests/env.example
@@ -1,3 +1,4 @@
+# create file .env for live batterie tests
 BATTERIE_HOST = '192.168.188.200'
 API_READ_TOKEN = 'abcdefgh-xxxx-zzzz-yyyy-0a1b2c3d4e5f'
 BATTERIE_1_HOST = '192.168.188.11'
