--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,18 @@ authors = [
     {name = "MarkusBiggus", email = "6531552+MarkusBiggus@users.noreply.github.com"},
 ]
 dependencies = [
-    'aiohttp>=3.9.5',
-    'aiohttp-fast-zlib>=0.1.1,<4.0.0',
-    "attrs>=23.2.0",
-    'isal~=1.7.1',
-    "propcache~=0.2",
-    'requests~=2.32.3',
-    'tzlocal>=5.2',
-    'urllib3~=1.26.5,<2',
-    'yarl>=1.9.4',
-    "setuptools>=76.1.0",
+    "aiohttp==3.12.15",
+    "aiohttp-fast-zlib==0.3.0",
+    "attrs==25.3.0",
+    "isal~=1.7.1",
+    "propcache==0.3.2",
+    "requests~=2.32.4",
+    "tzlocal>=5.2",
+    "urllib3>=2.0",
+    "yarl==1.20.1",
+#    "setuptools>=78.1.1",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.12.11"
 readme = "README.md"
 license = {text = "MIT"}
 
