--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ authors = [
     {name = "MarkusBiggus", email = "6531552+MarkusBiggus@users.noreply.github.com"},
 ]
 dependencies = [
-    "aiohttp==3.12.15",
-    "aiohttp-fast-zlib==0.3.0",
-    "attrs==25.3.0",
-    "isal~=1.7.1",
-    "propcache==0.3.2",
+    "aiohttp~=3.12",
+    "aiohttp-fast-zlib~=0.3",
+#    "attrs==25.3.0",
+    "isal~=1.7",
+#    "propcache==0.3.2",
     "requests~=2.32.4",
     "tzlocal>=5.2",
     "urllib3>=2.0",
