--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "MarkusBiggus", email = "6531552+MarkusBiggus@users.noreply.github.com"},
 ]
 dependencies = [
-    "aiohttp>=3.11.16,
+    "aiohttp>=3.11.16",
     "aiohttp-fast-zlib>=0.1.1,<4.0.0",
 #    "attrs>=23.2.0",
     "isal~=1.7.1",
