--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ authors = [
 ]
 dependencies = [
     "aiohttp>=3.11.16",
-    "aiohttp-fast-zlib>=0.1.1,<4.0.0",
+    "aiohttp-fast-zlib>=0.2.3,<4.0.0",
 #    "attrs>=23.2.0",
     "isal~=1.7.1",
 #    "propcache~=0.2",
     "requests~=2.32.3",
     "tzlocal>=5.2",
-    "urllib3>=1.26.20,<2",
+#   "urllib3>=1.26.20,<2.0.0",
+    "urllib3>=2.0",
     "yarl>=1.18.3",
 #    "setuptools>=76.1.0",
 ]
