get setuptools to use pyproject.toml

--- a/requirements-x.txt
+++ b/requirements-x.txt
@@ -1,6 +1,6 @@
 #must be compatible versions with home assistant
 aiohttp~=3.11.16,<4.0.0
-aiohttp-fast-zlib~=0.2.3,<4.0.0
+aiohttp-fast-zlib~=0.2.3
 attrs~=25.1.0
 isal~=1.7
 propcache~=0.3.0
