--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools>=78.1.1", "wheel"]
 
 [project]
 name = "sonnen_api_v2"
-version = "0.5.15"
+#version = "0.5.15"
 description = "Sonnen Batterie API V2 package"
 authors = [
     {name = "Vaclav Silhan", email = "katamave@gmail.com"},
