--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 #    "aiohttp>=3.11.16,<4.0.0",
     "aiohttp-fast-zlib~=0.3",
     "isal~=1.7",
-    "requests~=2.32",
+    "requests==2.32.4",
     "tzlocal>=5.2",
 #    "urllib3>=1.26.20,<2.0.0",
     "urllib3>=2.5.0",
