--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,18 @@ classifiers=[
 
 dynamic = ["version"]
 
+[project.optional-dependencies]
+test = [
+  "asyncmock>=0.4.2",
+  "freezegun>=1.5.2",
+  "load_dotenv>=0.1.0",  
+  "aioresponses==0.7.8",
+  "coverage==7.10.6",
+  "pytest-asyncio",
+  "pytest-cov",
+  "pytest==8.4.2",
+]
+
 [tool.setuptools]
 include-package-data = true
 
