--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [build-system]
 requires = ["setuptools>=78.1.1", "wheel"]
-#build-backend = "setuptools.build_meta"
+build-backend = "setuptools.build_meta"
+
 
 [project]
 name = "sonnen_api_v2"
-version = "0.5.15"
+#version = "0.5.15"
 description = "Sonnen Batterie API V2 package"
 authors = [
     {name = "Vaclav Silhan", email = "katamave@gmail.com"},
@@ -17,7 +18,7 @@ dependencies = [
 #    "aiohttp>=3.11.16,<4.0.0",
     "aiohttp-fast-zlib~=0.3",
     "isal~=1.7",
-    "requests~=2.32",
+    "requests==2.32.4",
     "tzlocal>=5.2",
 #    "urllib3>=1.26.20,<2.0.0",
     "urllib3>=2.5.0",
@@ -34,10 +35,28 @@ classifiers=[
 
 dynamic = ["version"]
 
+[project.optional-dependencies]
+test = [
+  "asyncmock>=0.4.2",
+  "freezegun>=1.5.2",
+  "load_dotenv>=0.1.0",  
+  "aioresponses==0.7.8",
+  "coverage==7.10.6",
+  "pytest-asyncio",
+  "pytest-cov",
+  "pytest==8.4.2",
+]
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.packages.find]
+include = ["sonnen_api_v2"]
+
 [tool.setuptools.dynamic]
 version = {attr = "sonnen_api_v2.__version__"}
 
-[tool.setuptools.packages.find]
-where = ["sonnen_api_v2"]  # list of folders that contain the packages (["."] by default)
-exclude = ["tests"]
-namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
+#[tool.setuptools.packages.find]
+#where = ["sonnen_api_v2"]  # list of folders that contain the packages (["."] by default)
+#exclude = ["tests"]
+#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
