--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
 #must be compatible versions with home assistant core
-aiohttp~=3.12.15,<4.0.0
+aiohttp>=3.12.15,<4.0.0
 aiohttp-fast-zlib~=0.3
 isal~=1.7
-requests~=2.32
+requests>=2.32.4
 urllib3>=2.5.0
 
 #for tests
