--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sonnen_api_v2"
-#version = "0.5.15"
 description = "Sonnen Batterie API V2 package"
 authors = [
     {name = "Vaclav Silhan", email = "katamave@gmail.com"},
@@ -13,14 +12,13 @@ authors = [
 ]
 #url='https://github.com/Katamave/sonnen_api_v2.git',
 
+# min version must match Home Assistant requirements
 dependencies = [
     "aiohttp>=3.12.15,<4.0.0",
-#    "aiohttp>=3.11.16,<4.0.0",
     "aiohttp-fast-zlib~=0.3",
     "isal~=1.7",
-    "requests==2.32.4",
+    "requests>=2.32.4",
     "tzlocal>=5.2",
-#    "urllib3>=1.26.20,<2.0.0",
     "urllib3>=2.5.0",
 ]
 requires-python = ">=3.12"
@@ -37,14 +35,14 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 test = [
+  "aioresponses>=0.7.8",
   "asyncmock>=0.4.2",
   "freezegun>=1.5.2",
-  "load_dotenv>=0.1.0",  
-  "aioresponses==0.7.8",
-  "coverage==7.10.6",
+  "load_dotenv>=0.1.0",
+  "coverage>=7.10.6",
+  "pytest",
   "pytest-asyncio",
   "pytest-cov",
-  "pytest==8.4.2",
 ]
 
 [tool.setuptools]
@@ -55,8 +53,3 @@ include = ["sonnen_api_v2"]
 
 [tool.setuptools.dynamic]
 version = {attr = "sonnen_api_v2.__version__"}
-
-#[tool.setuptools.packages.find]
-#where = ["sonnen_api_v2"]  # list of folders that contain the packages (["."] by default)
-#exclude = ["tests"]
-#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
